--- a/src/client/src/index.css
+++ b/src/client/src/index.css
@@ -2,6 +2,15 @@
   box-sizing: border-box;
 }
 
+:root {
+  --border-radius-1: 10px;
+  --margin-1: 1.5rem;
+  --padding-1: 1.1rem;
+  --padding-2: 2rem;
+  --grey-1: rgb(110, 114, 114);
+  --grey-2: rgba(153, 153, 153, 0.44);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
