--- a/src/client/src/index.css
+++ b/src/client/src/index.css
@@ -3,6 +3,15 @@
 }
 
 :root {
+  --primary-color-main: #56487a;
+  --primary-color-light: #8474a9;
+  --primary-color-dark: #2b204e;
+  --secondary-color-main: #fafafc;
+  --secondary-color-light: #ffffff;
+  --secondary-color-dark: #c7c7c9;
+  --logo-bg-color: #3a63c7;
+  --aqua-1: #1dc9b7;
+  --yellow: #ffc241;
   --border-radius-1: 10px;
   --margin-1: 1.5rem;
   --padding-1: 1.1rem;
@@ -13,9 +22,7 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Nunito', 'sans-serif';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
