--- a/src/client/src/index.css
+++ b/src/client/src/index.css
@@ -8,7 +8,8 @@
   --primary-color-dark: #2b204e;
   --secondary-color-main: #fafafc;
   --secondary-color-light: #ffffff;
-  --secondary-color-dark: #c7c7c9;
+  --secondary-color-dark: #d3d3dd;
+  --secondary-color-dark-1: #aeaeb6;
   --logo-bg-color: #3a63c7;
   --aqua-1: #1dc9b7;
   --yellow: #ffc241;
