--- a/src/client/src/index.css
+++ b/src/client/src/index.css
@@ -16,10 +16,12 @@
   --border-radius-1: 10px;
   --margin-1: 1.5rem;
   --margin-widget: 1rem;
+  --margin-xl: 2rem;
   --padding-1: 1.1rem;
   --padding-2: 2rem;
   --grey-1: rgb(110, 114, 114);
   --grey-2: rgba(153, 153, 153, 0.44);
+  --grey-3: rgb(78, 75, 75);
 }
 
 body {
