--- a/src/client/src/components/NotificationViewer/notif.css
+++ b/src/client/src/components/NotificationViewer/notif.css
@@ -6,6 +6,7 @@
   overflow: auto;
   list-style-type: none;
   position: relative;
+  margin: 0;
 }
 
 .notif-viewer > li:not(:last-child) {
@@ -46,4 +47,9 @@
   font-size: 12px;
   color: rgb(117, 115, 115);
   text-align: right;
+}
+
+.notif__none {
+  padding: var(--padding-1);
+  color: var(--grey-3);
 }
