--- a/src/client/src/components/Search/index.css
+++ b/src/client/src/components/Search/index.css
@@ -4,6 +4,8 @@
 
 .search__box {
   width: 100%;
+  border-radius: 5px;
+  background-color: var(--secondary-color-main);
 }
 
 .search__inner-wrapper {
@@ -19,6 +21,8 @@
   width: 100%;
   padding: var(--padding-1);
   border: 1px solid var(--grey-2);
+  background-color: var(--secondary-color-main);
+  z-index: 9999;
 }
 
 .result {
