added assocItem component

--- a/src/client/src/components/Search/index.css
+++ b/src/client/src/components/Search/index.css
@@ -27,7 +27,7 @@
 
 .result {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   text-align: left;
   padding: 0.8rem var(--padding-1);
