--- a/src/client/src/components/FeatureCard/index.css
+++ b/src/client/src/components/FeatureCard/index.css
@@ -2,9 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 310px;
-  min-height: 380px;
-  max-height: 380px;
+  width: 100%;
   overflow: hidden;
   border: 1px solid var(--grey-2);
   border-radius: var(--border-radius-1);
