--- a/src/client/src/index.css
+++ b/src/client/src/index.css
@@ -78,6 +78,17 @@ code {
   border-radius: var(--border-radius-1);
 }
 
+.scroll-bar::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  background-color: var(--secondary-color-light);
+}
+
+.scroll-bar::-webkit-scrollbar-thumb {
+  background-color: var(--secondary-color-dark-1);
+  border-radius: var(--border-radius-1);
+}
+
 .widget-body--med {
   display: flex;
   justify-content: center;
