--- a/src/client/src/index.css
+++ b/src/client/src/index.css
@@ -155,3 +155,64 @@ code {
   font-size: 13px;
   color: var(--grey-3);
 }
+
+/* pages */
+.doc-page {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 2px;
+  height: 100%;
+  max-height: 100vh;
+  overflow: auto;
+}
+
+.doc-page__timeline-column {
+  grid-column: 2 / span 2;
+  height: 100%;
+  max-height: 100vh;
+}
+
+.doc-page__info-column {
+  height: 100%;
+  max-height: 100vh;
+  overflow: auto;
+}
+
+.page-loading-container,
+.page-error-container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (max-width: 1024px) {
+  .doc-page__timeline-column {
+    grid-column: 2 / span 3;
+  }
+
+  .doc-page__widget-column {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .doc-page__timeline-column {
+    grid-column: 3 / span 2;
+  }
+
+  .doc-page__info-column {
+    grid-column: 1 / span 2;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .doc-page {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: auto;
+    max-height: none;
+  }
+}
