--- a/src/client/src/pages/Dashboard/index.css
+++ b/src/client/src/pages/Dashboard/index.css
@@ -3,8 +3,8 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 2rem;
+  width: 100%;
   max-width: 100%;
-  height: 100vh;
   overflow: auto;
   background-color: var(--secondary-color-dark);
 }
