--- a/src/client/src/App.css
+++ b/src/client/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+.app-loading-overlay {
+  display: flex;
+  background-color: white;
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
