feat: coming soon page

--- a/src/client/src/pages/QuickFlow/index.css
+++ b/src/client/src/pages/QuickFlow/index.css
@@ -11,6 +11,15 @@
   display: block;
 }
 
+.coming-soon-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  user-select: none;
+  color: var(--grey-3);
+}
+
 @media screen and (max-width: 1024px) {
   .side-bar-container {
     display: none;
